tests/snapshots/ast/r#mod__common__assertion__parser::expression_precedence::precedence::p03_mul_left_associative_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Binary:
            left:
              Binary:
                left:
                  Number: 1
                op: Mul
                right:
                  Number: 2
            op: Mul
            right:
              Number: 3
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Binary:
              left:
                Number: 1
              op: Mul
              right:
                Number: 2
          op: Mul
          right:
            Number: 3
