tests/snapshots/ast/r#mod__common__assertion__parser::expression_precedence::precedence::p04_mixed_precedence_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Binary:
            left:
              Binary:
                left:
                  Number: 1
                op: Add
                right:
                  Binary:
                    left:
                      Number: 2
                    op: Mul
                    right:
                      Number: 3
            op: Add
            right:
              Number: 4
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Binary:
              left:
                Number: 1
              op: Add
              right:
                Binary:
                  left:
                    Number: 2
                  op: Mul
                  right:
                    Number: 3
          op: Add
          right:
            Number: 4
