tests/snapshots/ast/r#mod__common__assertion__parser::expression_precedence::precedence::p05_comparison_lower_than_add_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Binary:
            left:
              Binary:
                left:
                  Number: 1
                op: Add
                right:
                  Number: 2
            op: Eq
            right:
              Binary:
                left:
                  Number: 3
                op: Add
                right:
                  Number: 4
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Binary:
              left:
                Number: 1
              op: Add
              right:
                Number: 2
          op: Eq
          right:
            Binary:
              left:
                Number: 3
              op: Add
              right:
                Number: 4
