tests/snapshots/ast/r#mod__common__assertion__parser::expression_precedence::precedence::p06_logical_precedence_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Binary:
            left:
              Var: a
            op: Or
            right:
              Binary:
                left:
                  Var: b
                op: And
                right:
                  Var: c
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Var: a
          op: Or
          right:
            Binary:
              left:
                Var: b
              op: And
              right:
                Var: c
