tests/snapshots/ast/r#mod__common__assertion__parser::expression_precedence::precedence::p07_equality_lower_than_and_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Binary:
            left:
              Binary:
                left:
                  Var: a
                op: Eq
                right:
                  Var: b
            op: And
            right:
              Binary:
                left:
                  Var: c
                op: Eq
                right:
                  Var: d
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Binary:
              left:
                Var: a
              op: Eq
              right:
                Var: b
          op: And
          right:
            Binary:
              left:
                Var: c
              op: Eq
              right:
                Var: d
