tests/snapshots/ast/r#mod__common__assertion__parser::expression_precedence::precedence::p08_unary_binding_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Binary:
            left:
              Unary:
                op: Neg
                expr:
                  Var: a
            op: Mul
            right:
              Var: b
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Unary:
              op: Neg
              expr:
                Var: a
          op: Mul
          right:
            Var: b
