tests/snapshots/ast/r#mod__common__assertion__parser::expression_precedence::precedence::p09_multiple_unary_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Unary:
            op: Not
            expr:
              Unary:
                op: Not
                expr:
                  Var: a
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Unary:
          op: Not
          expr:
            Unary:
              op: Not
              expr:
                Var: a
