tests/snapshots/ast/r#mod__common__assertion__parser::expression_precedence::precedence::p10_postfix_vs_unary_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Unary:
            op: Neg
            expr:
              Member:
                target:
                  Var: a
                field: b
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Unary:
          op: Neg
          expr:
            Member:
              target:
                Var: a
              field: b
