tests/snapshots/ast/r#mod__common__assertion__parser::expression_precedence::precedence::p11_postfix_chain_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Member:
            target:
              Call:
                callee:
                  Member:
                    target:
                      Var: a
                    field: b
                args: []
            field: c
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Member:
          target:
            Call:
              callee:
                Member:
                  target:
                    Var: a
                  field: b
              args: []
          field: c
