tests/snapshots/ast/r#mod__common__assertion__parser::expression_precedence::precedence::p13_assignment_lowest_precedence_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - Let:
        name: a
        kind: MutableStatic
        value:
          Binary:
            left:
              Var: b
            op: Add
            right:
              Binary:
                left:
                  Var: c
                op: Mul
                right:
                  Var: d
  modules: []
  globals: []
  entry: ~
stmts:
  - Let:
      name: a
      kind: MutableStatic
      value:
        Binary:
          left:
            Var: b
          op: Add
          right:
            Binary:
              left:
                Var: c
              op: Mul
              right:
                Var: d
